// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptiveStatistics correlation calculates the correlation coefficient between two vectors 1`] = `0.8451542547285167`;

exports[`DescriptiveStatistics correlation calculates the correlation matrix for a set of data 1`] = `
FloatMatrix {
  "_data": Float64Array [
    1.0000000000000002,
    0.8451542547285167,
    0.29880715233359845,
    0.8451542547285167,
    0.9999999999999999,
    0,
    0.29880715233359845,
    0,
    1.0000000000000002,
  ],
  "_shape": Array [
    3,
    3,
  ],
}
`;

exports[`DescriptiveStatistics standardize centers and scales a vector 1`] = `
FloatVector {
  "_data": Float64Array [
    1.0690449676496976,
    1.0690449676496976,
    -0.2672612419124244,
    -0.2672612419124244,
    -1.6035674514745464,
  ],
}
`;

exports[`DescriptiveStatistics standardize centers and standardizes the columns of a matrix 1`] = `
FloatMatrix {
  "_data": Float64Array [
    1.0690449676496976,
    1.0690449676496976,
    -0.2672612419124244,
    -0.2672612419124244,
    -1.6035674514745464,
    0,
    1.5811388300841895,
    0,
    0,
    -1.5811388300841895,
    1.118033988749895,
    -1.118033988749895,
    0,
    1.118033988749895,
    -1.118033988749895,
  ],
  "_shape": Array [
    5,
    3,
  ],
}
`;
